导航栏标题添加霓虹灯特效

--- a/themes/fluid/source/css/_pages/_base/_widget/header.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/header.styl
@@ -171,3 +171,15 @@
 
   #subtitle, .typed-cursor
     font-size 1.35rem
+
+.navbar-title
+  outline none
+  --c lightseagreen
+  text-shadow 0 0 10px var(--c),0 0 20px var(--c),0 0 40px var(--c),0 0 80px var(--c),0 0 160px var(--c)
+  animation animate 5s linear infinite
+
+@keyframes animate{
+  to{
+      filter: hue-rotate(360deg)
+  }
+}  
