博客更新；接入和风天气

--- a/themes/fluid/source/css/_pages/_base/_widget/header.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/header.styl
@@ -182,4 +182,10 @@
   to{
       filter: hue-rotate(360deg)
   }
-}  
+}
+
+.weather-plugin
+  @media (max-width: 992px)
+    display none
+  @media (min-width: 992px)
+    display block
