--- a/themes/fluid/layout/_partials/header/navigation.ejs
+++ b/themes/fluid/layout/_partials/header/navigation.ejs
@@ -3,6 +3,33 @@
     <a class="navbar-brand" href="<%= url_for() %>">
       <strong class="navbar-title"><%= theme.navbar.blog_title || config.title %></strong>
     </a>
+    
+    <span class="weather-plugin"><div id="he-plugin-simple"></div></span>
+    <script>
+        WIDGET = {
+            "CONFIG": {
+                "modules": "01234",
+                "background": "5",
+                "tmpColor": "FFFFFF",
+                "tmpSize": "16",
+                "cityColor": "FFFFFF",
+                "citySize": "16",
+                "aqiColor": "FFFFFF",
+                "aqiSize": "16",
+                "weatherIconSize": "24",
+                "alertIconSize": "18",
+                "padding": "10px 10px 10px 10px",
+                "shadow": "0",
+                "language": "auto",
+                "borderRadius": "10",
+                "fixed": "false",
+                "vertical": "top",
+                "horizontal": "left",
+                "key": "26f3db12cd1c4e0a99f49b0aee7ff751"
+            }
+        }
+    </script>
+    <script src="https://widget.qweather.net/simple/static/js/he-simple-common.js?v=2.0"></script>
 
     <button id="navbar-toggler-btn" class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent"
