--- a/themes/fluid/layout/_partials/loading.ejs
+++ b/themes/fluid/layout/_partials/loading.ejs
@@ -48,35 +48,35 @@
     .blue-orbit {
         width: 200px;
         height: 200px;
-        border: 3px solid #1a91fa;
+        border: 2px solid #1a91fa;
         animation: spin3D 3s linear .2s infinite;
     }
 
     .green-orbit {
         width: 160px;
         height: 160px;
-        border: 3px solid #00ffb7;
+        border: 2px solid #00ffdd;
         animation: spin3D 2s linear 0s infinite;
     }
 
     .red-orbit {
         width: 110px;
         height: 110px;
-        border: 3px solid #d75151;
+        border: 2px solid #d75151;
         animation: spin3D 1s linear 0s infinite;
     }
 
     .white-orbit-a {
         width: 70px;
         height: 70px;
-        border: 2px solid #faf5f5;
+        border: 1px solid #faf5f5;
         animation: spin3D 3s linear 0s infinite;
     }
 
     .white-orbit-b {
         width: 70px;
         height: 70px;
-        border: 2px solid #faf5f5;
+        border: 1px solid #faf5f5;
         animation: spin3D 1.5s linear 0s infinite;
     }
 
