关闭灯笼挂件；

--- a/themes/fluid/layout/_partials/header/navigation.ejs
+++ b/themes/fluid/layout/_partials/header/navigation.ejs
@@ -94,7 +94,7 @@
       </ul>
     </div>
     
-    <style type="text/css">
+    <!-- <style type="text/css">
         .lantern-box {
             position: fixed;
             top: -25px;
@@ -301,6 +301,7 @@
               </div>
           </div>
       </div>
-    </div>
+    </div> -->
+    
   </div>
 </nav>
